--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -2,14 +2,14 @@
     "env": {
         "browser": false,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
-    "extends": [
-        "airbnb-base"
-    ],
+    "extends": ["airbnb-base", "plugin:prettier/recommended"],
     "parserOptions": {
         "ecmaVersion": 12
     },
     "rules": {
+        "prettier/prettier": "warn"
     }
 }
